Fixing alignment & padding of rendered lists

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,6 +59,8 @@ form, button {
 
 .list-group {
   font-family: 'Poppins', sans-serif;
+  text-align: left;
+  padding: 10px 0px !important;
 }
 
   
